Check in for keyboard movement

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 
 <body ng-controller="ShellController as vm">
     <h2>NG-RX Pong</h2>
+    <key-move-item></key-move-item>
     <draggable-item></draggable-item>
     <script src="bundle.js"></script>
 </body>
