Updates for staying in the box

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>NG RX Pong</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body ng-controller="ShellController as vm">
     <h2>NG-RX Pong</h2>
-    <key-move-item></key-move-item>
-    <draggable-item></draggable-item>
+    <game-container></game-container>
     <script src="bundle.js"></script>
 </body>
 
