--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -39,13 +39,13 @@ class: center, middle
 3. Properties of Observables
 4. Angular and RxJS
 5. Code Demo
-6. Alternatives
+6. Other RxJS Topics to explore
+7. Alternatives
 
 ---
 
 # Who am I?
 - Senior software engineer at Learning Objects building technology solutions to move education forward
-- I like building webapps and brewing beer
 
 ---
 
@@ -59,7 +59,7 @@ class: center, middle
 
 # None of the above (sort of)!
 
-It is a programming paradigm, but its actually not that new
+It is a programming paradigm, but it's actually not that new
 
 ---
 
@@ -73,9 +73,9 @@ It is a programming paradigm, but its actually not that new
 
 # The project was open sourced in 2012
 
-- A lot was included on top of the .NET version.  Microsoft also released RxJS and Rx++
-- Since then versions have been released for Ruby and Python
-- [Home of RX](https://rx.codeplex.com/)
+- ## A lot was included on top of the .NET version.  Microsoft also released RxJS and Rx++
+- ## Since then versions have been released for Ruby and Python
+- ## [Home of RX](https://rx.codeplex.com/)
 
 ---
 
@@ -85,16 +85,17 @@ At its core, Reactive Extensions is an implementation of the *Observer pattern* 
 
 ---
 
-# Wikipedia that
+# Gang of four
 
-> The observer pattern is a software design pattern in which an object, called the subject, maintains a list of its dependents, called observers, and notifies them automatically of any state changes, usually by calling one of their methods. It is mainly used to implement distributed event handling systems. The Observer pattern is also a key part in the familiar model–view–controller (MVC) architectural pattern.[1] The observer pattern is implemented in numerous programming libraries and systems, including almost all GUI toolkits.
+> The observer pattern is a design pattern that defines a link between objects so that when one object's state changes, all dependent objects are updated automatically. This pattern allows communication between objects in a loosely coupled manner.
 
 ---
 
 # Extension of observer pattern
-- Two key enhancements
+- ## Two key enhancements
     1. Ability for observer to signal when there is no more data
     2. Ability for observer to signal when an error has ocurred
+- ## All updates are pushed rather than pulled
 
 ---
 
@@ -258,14 +259,15 @@ class: center, middle
 ---
 
 # Angular and RxJS
-- Very small API footprint
-- Most of the work is handled by injectable rx service
+- ## Very small API footprint
+- ## Most of the work is handled by injectable rx service
+- ## The $scope integration works, but its not necessarily concise
 
 ---
 
 # Factories
-- rx : Contains all the functionality of RxJS
-- observeOnScope : factory to create streams based on changes on scope
+- ## rx : Contains all the functionality of RxJS
+- ## observeOnScope : factory to create streams based on changes on scope
 
 ---
 
@@ -290,10 +292,10 @@ class: center, middle
 ---
 
 # Methods added to $rootScope (and inherited down)
-- $createObservableFunction
-- $digestObservables
-- $eventToObservable
-- $toObservable
+- ## $createObservableFunction
+- ## $digestObservables
+- ## $eventToObservable
+- ## $toObservable
 
 ---
 class: center, middle
@@ -304,6 +306,13 @@ class: center, middle
 
 # Code Demo
 Lets build a simple (aka barely functional) game of pong
+
+---
+
+# Other RxJS topics to explore
+- ## The role that schedulers play in the timing of emitted events
+- ## Dispoing of subscriptions to observables
+- ## Rx Subjects
 
 ---
 
