--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html lang="en" ng-app="ng-rx-pong">
 
-<head>
-    <meta charset="UTF-8">
-    <title>NG RX Pong</title>
-    <link rel="stylesheet" href="main.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>NG RX Pong</title>
+        <link href='https://fonts.googleapis.com/css?family=Baumans' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="main.css">
+    </head>
 
-<body ng-controller="ShellController as vm">
-    <h2>NG-RX Pong</h2>
-    <game-container></game-container>
-    <script src="bundle.js"></script>
-</body>
+    <body ng-controller="ShellController as vm">
+        <div>
+            <h2>NG-RX Pong</h2>
+            <game-container></game-container>
+        </div>
+        <script src="bundle.js"></script>
+    </body>
 
 </html>
