--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -360,6 +360,7 @@ Lets build a simple (aka barely functional) game of pong
 6. [Rx Marbles](http://rxmarbles.com/)
 7. [Why Rx](https://github.com/Reactive-Extensions/RxJS/blob/master/doc/mapping/highland/whyrx.md)
 8. [Hot vs. Cold Observables](https://channel9.msdn.com/Blogs/J.Van.Gogh/Rx-API-in-depth-Hot-and-Cold-observables)
+9. [Netflix Mantis and RxJava](http://www.slideshare.net/g9yuayon/qcon-talk-on-netflix-mantis-a-stream-processing-system)
 
 ---
 
